--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/www/css/personalizado.css">
     <!--Ícones Material Design-->
     <link rel="stylesheet" href="css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="/www/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
 
 
 
