--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,10 @@
     <!-- Path to Framework7 Library Bundle CSS -->
     <link rel="stylesheet" href="lib/framework7-bundle.min.css">
     <!-- CSS PERSONALIZADO PARA MENU-->
-    <link rel="stylesheet" href="css/personalizado.css">
+    <link rel="stylesheet" href="personalizado.css">
     <!--Ícones Material Design-->
-    <link rel="stylesheet" href="css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="materialdesignicons.min.css">
+    <link rel="stylesheet" href="index.css">
 
 
 
