--- a/views/index.html
+++ b/views/index.html
@@ -10,14 +10,14 @@
     <!-- Color theme for statusbar (Android only) -->
     <meta name="theme-color" content="#2196f3">
     <!-- Your app title -->
-    <title>Template Tab</title>
+    <title>Resgitra aí Boy - Login</title>
     <!-- Path to Framework7 Library Bundle CSS -->
     <link rel="stylesheet" href="lib/framework7-bundle.min.css">
     <!-- CSS PERSONALIZADO PARA MENU-->
-    <link rel="stylesheet" href="personalizado.css">
+    <link rel="stylesheet" href="css/personalizado.css">
     <!--Ícones Material Design-->
-    <link rel="stylesheet" href="materialdesignicons.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="css/index.css">
 
 
 
@@ -29,26 +29,6 @@
 
         <!-- Your main view, should have "view-main" class -->
         <div class="view view-main">
-
-            <!-- TAB BAR-->
-            <div class="toolbar toolbar-bottom">
-                <div class="toolbar-inner display-flex">
-                    <a href="/index/" class="tab-link link active">
-                        <i class="mdi mdi-home"></i>
-                        <span>Link 1</span>
-                    </a>
-                    <a href="/www/link2.html" class="tab-link link">
-                        <i class="mdi mdi-link"></i>
-                        <span>Link 2</span>
-                    </a>
-                    <a href="/link3/" class="tab-link link">
-                        <i class="mdi mdi-account"></i>
-                        <span>Link 3</span>
-                    </a>
-
-                </div>
-            </div>
-
             <!-- Initial Page, "data-name" contains page name -->
             <div data-name="index" class="page color-theme-blue">
 
@@ -69,6 +49,11 @@
                         <div class="input-group">
                             <input type="password" name="password" placeholder="Senha" required/>
                         </div>
+                        <% if(errorMessage) { %> <!-- Verifica se há uma mensagem de erro -->
+                            <div class="error-message">
+                                <%= errorMessage %>
+                            </div> <!-- Exibe a mensagem de erro -->
+                            <% } %>
                         <div class="input-group">
                             <input type="submit" name="acao" value="Login"/>
                         </div>
@@ -83,7 +68,6 @@
 	<script type="text/javascript" src="lib/jquery-3.7.0.min.js"></script>	
     <!-- Roteamento do app-->
     <script type="text/javascript" src="js/routes.js"></script>
-    <script src="cordova.js"></script>
 </body>
 
 </html>
