--- a/css/home.css
+++ b/css/home.css
@@ -67,3 +67,13 @@ input[type="text"] {
     border-radius: 4px;
     font-size: 16px;
 }
+
+.container-buscar-contrato {
+    display: grid;
+    grid-template-columns: 30% 30%; /* Define duas colunas de 30% cada */
+    gap: 10%; /* Espaçamento entre as colunas, opcional */
+}
+
+#contractNumber, #searchButton {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
