--- a/www/css/home.css
+++ b/www/css/home.css
@@ -14,8 +14,9 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 90%;
+    width: 95%;
     max-width: 600px;
+    margin-top: -100px;
 }
 
 h1 {
@@ -35,7 +36,7 @@ input[type="text"] {
 button {
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     background-color: #007bff;
     color: #fff;
     font-size: 16px;
@@ -67,3 +68,99 @@ input[type="text"] {
     border-radius: 4px;
     font-size: 16px;
 }
+.navbar-bg{
+    background-color: #2196F3;
+    color: #fff;
+}
+.title{
+    color: #fff;
+    font-size: 20px;
+    font-weight:500;
+}
+.container-buscar-contrato {
+    display: grid;
+    grid-template-columns: 40% 30%; /* Define duas colunas de 30% cada */
+    gap: 10%; /* Espaçamento entre as colunas, opcional */
+    justify-content: center; /* Centraliza as colunas horizontalmente */
+    align-items: center; /* Centraliza os itens verticalmente */
+
+}
+
+#contractNumber, #searchButton {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
+#searchButton {
+    height: 70%; /* Necessário para garantir que os elementos preencham suas colunas */
+    margin-top: -18px;
+    border-radius: 10px;
+}
+.container-contrato {
+    display: grid;
+    grid-template-columns: 8% 20% 5% 55%; /* Define duas colunas de 30% cada */
+    gap: 20px; /* Espaçamento entre as colunas, opcional */
+    justify-content: start; /* Alinha as colunas à esquerda */
+    margin-left: -15px; /* Adiciona uma margem à esquerda */
+
+
+}
+
+#label-contrato, #input-contrato, #label-nome, #input-nome {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
+.container-endereco {
+    display: grid;
+    grid-template-columns: 8% 53% 5% 23%; /* Define duas colunas de 30% cada */
+    gap: 20px; /* Espaçamento entre as colunas, opcional */
+    justify-content: start; /* Alinha as colunas à esquerda */
+    margin-left: -15px; /* Adiciona uma margem à esquerda */
+    margin-top: -10px;
+
+}
+
+#label-endereco, #input-endereco, #label-bairro, #input-bairro {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
+.container-forma-de-pagamento {
+    display: grid;
+    grid-template-columns: 28% 10% 25% 28%; /* Define duas colunas de 30% cada */
+    gap: 15px; /* Espaçamento entre as colunas, opcional */
+    justify-content: start; /* Alinha as colunas à esquerda */
+    margin-left: -15px; /* Adiciona uma margem à esquerda */
+    margin-top: -10px;
+
+
+}
+
+#label-forma-de-pagamento, #input-forma-de-pagamento, #label-data-ativacao, #input-data-ativacao {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
+
+.container-debito {
+    display: grid;
+    grid-template-columns: 28% 10% 25% 30%; /* Define duas colunas de 30% cada */
+    gap: 15px; /* Espaçamento entre as colunas, opcional */
+    justify-content: start; /* Alinha as colunas à esquerda */
+    margin-left: -15px; /* Adiciona uma margem à esquerda */
+    margin-top: -10px;
+
+
+}
+
+#label-total-parcelas, #input-total-parcelas, #label-otal-debito, #input-otal-debito {
+    width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+}
+.rounded-div {
+    width: auto;
+    height: 2px;
+    background-color: #f0f0f0;
+    border: 2px solid #ccc;
+    border-radius: 15px; /* Aqui você define o arredondamento das bordas */
+    padding: 15px;
+    text-align: center;
+    margin-left: -50px;
+    margin-top: 38px;
+    display: flex; /* Define o contêiner como um contêiner flexível */
+    justify-content: center; /* Centraliza o conteúdo horizontalmente */
+    align-items: center; /* Centraliza o conteúdo verticalmente */
+}
+
