--- a/www/css/home.css
+++ b/www/css/home.css
@@ -64,18 +64,21 @@ input[type="text"] {
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #2196F3;
+    border-radius: 15px;
     font-size: 16px;
 }
 .navbar-bg{
     background-color: #2196F3;
     color: #fff;
+    font-weight:bold;    
+
 }
 .title{
     color: #fff;
     font-size: 20px;
-    font-weight:500;
+    font-weight:bold;    
+
 }
 .container-buscar-contrato {
     display: grid;
@@ -153,7 +156,7 @@ input[type="text"] {
     width: auto;
     height: 2px;
     background-color: #f0f0f0;
-    border: 2px solid #ccc;
+    border: 2px solid #2196F3;
     border-radius: 15px; /* Aqui você define o arredondamento das bordas */
     padding: 15px;
     text-align: center;
@@ -164,3 +167,21 @@ input[type="text"] {
     align-items: center; /* Centraliza o conteúdo verticalmente */
 }
 
+.user-info {
+    display: flex; /* Para alinhar o nome do usuário e o ícone na mesma linha */
+    align-items: center; /* Centraliza verticalmente os elementos */
+    justify-content: end; /* Alinha as colunas à esquerda */
+    padding: 20px;
+    font-size: 18px; /* Tamanho do ícone */
+
+
+  }
+  
+  .user-info .username {
+    margin-left: 10px; /* Espaçamento entre o nome do usuário e o ícone */
+  }
+  
+  #icone-user {
+    font-size: 24px; /* Tamanho do ícone */
+    color: #fff; /* Cor do ícone */
+  }
