--- a/www/css/personalizado.css
+++ b/www/css/personalizado.css
@@ -16,10 +16,17 @@
 	font-weight:bold;    
 }
 
-.toolbar-inner .link:not(.active){
-    color:white;
-	font-weight:normal;
+.toolbar-inner .link:not(.active) {
+    color:#04243f;
+    font-weight: normal;
 }
+
+/* Estilos para o link ativo */
+.toolbar-inner .link.active {
+    color: white; /* Define a cor do texto como branco */
+    font-weight: bold; /* Mantém o texto em negrito */
+}
+
 
 .toolbar-inner > .link i{
     font-size: 28px;
