--- a/views/home.html
+++ b/views/home.html
@@ -107,11 +107,11 @@
                  
                 </div>
                 <div class="container-forma-de-pagamento">
-                  <h4>F. de Pagamento:</h4>
+                  <h4>F.Pagamento:</h4>
                   <div class="rounded-div">
                      <span id = "output-forma-de-pagamento"></span>
                  </div> 
-                 <h4>D. de Ativação:</h4>
+                 <h4>Dt.Ativação:</h4>
                   <div class="rounded-div">
                      <span id = "output-data-ativacao"></span>
                  </div> 
@@ -123,7 +123,7 @@
                   <input id = "input-data-ativacao"/><!-->
                 </div>
                 <div class="container-debito">
-                  <h4>Quant. Parcelas:</h4>
+                  <h4>Qt.Parcelas:</h4>
                   <div class="rounded-div">
                      <span id = "output-total-parcelas"></span>
                  </div> 
